cabal-version:       >=1.10
-- A polyomino solver, in the sense of https://en.wikipedia.org/wiki/Polyomino
--   Originally a 6x10 Pentomino solver, reworked to be generic

name:                Polyomino
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Sebastien Migniot
maintainer:          sebastien+github@migniot.com
build-type:          Simple

library
  build-depends:     base >=4.14 && <5.15 , containers >=0.6 && <1
  default-language:  Haskell2010
  ghc-options:       -O2
  exposed-modules:   Lib
  hs-source-dirs:    .

executable Polyomino
  build-depends:     base >=4.14 && <5.15 , containers >=0.6 && <1
  default-language:  Haskell2010
  ghc-options:       -O2
  main-is:           Main.hs
